# polytrage

./: .gitignore  ARCHITECTURE.md  CONTRACTS.md  LEADERBOARD.md  Makefile  README.md  params.json  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
dashboard/: index.html
dashboard/site/: index.html
docs/: COUNCIL-2026-07-16.md
orchestration/: graph.py
results/: baseline.json  history.jsonl
scripts/: build_dashboard_site.sh  capture_final.py  capture_multi.py  evolve.py  notify_final_listed.sh  paper_trade.py
src/polytrage/: __init__.py  cli.py  models.py
src/polytrage/backtest/: __init__.py  metrics.py  runner.py
src/polytrage/capture/: __init__.py  books.py  paper.py  wss.py
src/polytrage/data/: __init__.py  clob.py  gamma.py  store.py
src/polytrage/engine/: __init__.py  align.py  arb.py
src/polytrage/optimize/: __init__.py  tuner.py
tests/: test_backtest.py  test_capture.py  test_cli.py  test_data.py  test_engine.py  test_optimize.py  test_paper.py
tests/fixtures/: event.json  hist_ARG.json  hist_DRAW.json  hist_ENG.json
